--- a/AnyListen/Views/UserControls/AboutView.xaml
+++ b/AnyListen/Views/UserControls/AboutView.xaml
@@ -121,4 +121,8 @@
                                                         </BeginStoryboard>
                                                     </Trigger.EnterActions>
                                                     <Trigger.ExitActions>
-                                      
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <ColorAnimation Duration="0:0:0.2" To="#FF2980B9" Storyboard.TargetName="txtV" Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"/>
+                                                                <ColorAnimation Duration="0:0:0.2" To="#FF2F97DB" Storyboard.TargetName="txtB" Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"/>
+                                                                <ColorAnimation Duration="0:0:0.2" To="{StaticResource BlackColor}" Storyboard.TargetName="txtparadise" Storyboard.T
