--- a/AnyListen/Views/UserControls/AboutView.xaml
+++ b/AnyListen/Views/UserControls/AboutView.xaml
@@ -183,4 +183,17 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <TextBlock  behaviors:TextBl
+            <TextBlock  behaviors:TextBlockBehavior.UpperText="{DynamicResource Thanks}" Style="{StaticResource TextBlockHeader}" Margin="0,30,0,0"/>
+            <StackPanel Orientation="Vertical">
+                <StackPanel.Resources>
+                    <Style TargetType="Label">
+                        <Setter Property="Margin" Value="0,5,0,0"/>
+                    </Style>
+                </StackPanel.Resources>
+                <Label Content="{DynamicResource AboutThanks1}"/>
+                <Label>
+                    <TextBlock TextWrapping="Wrap" Text="{DynamicResource AboutThanks2}"/>
+                </Label>
+                <Label>
+                    <behaviors:ContentControlBehavior.FormatValues>
+                        <x:Array Type="system:String">
