--- a/AnyListen/Views/UserControls/EqualizerView.xaml
+++ b/AnyListen/Views/UserControls/EqualizerView.xaml
@@ -5,4 +5,19 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewmodels="clr-namespace:AnyListen.ViewModels"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" DataContext="{x:Static viewmodels:MainViewModel.Insta
+             d:DesignHeight="300" d:DesignWidth="300" DataContext="{x:Static viewmodels:MainViewModel.Instance}" x:Name="UserControl">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/AnyListen;component/Resources/Styles/MetroWindowStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <Grid Margin="5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Separator Visibility="{Binding Element
