--- a/AnyListen/Views/UserControls/EqualizerView.xaml
+++ b/AnyListen/Views/UserControls/EqualizerView.xaml
@@ -38,4 +38,17 @@
             <MenuItem Header="{DynamicResource Reset}" Command="{Binding MusicManager.CSCoreEngine.EqualizerSettings.ResetEqualizer}" Background="Transparent"/>
         </Menu>
         <Button Grid.Row="1" Style="{StaticResource WindowButtonStyle}" Click="PART_CLOSE_Click" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="5" Width="20" Height="20"/>
-        <I
+        <ItemsControl Margin="5,10,5,10" Grid.Row="2" ItemsSource="{Binding MusicManager.CSCoreEngine.EqualizerSettings.Bands}" HorizontalAlignment="Center">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                       
